modifications to allow language service to find Toolchains inbuilt include paths.

--- a/AvalonStudio/AvalonStudio.Models/AvalonStudio.Models.csproj
+++ b/AvalonStudio/AvalonStudio.Models/AvalonStudio.Models.csproj
@@ -130,6 +130,14 @@
       <Project>{b5348415-ab76-48c1-8355-28090e0b0744}</Project>
       <Name>AvalonStudio.Projects</Name>
     </ProjectReference>
+    <ProjectReference Include="..\AvalonStudio.Toolchains\AvalonStudio.Toolchains.csproj">
+      <Project>{fc693e81-70bc-4972-bfa8-19d3db8fb1cc}</Project>
+      <Name>AvalonStudio.Toolchains</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\AvalonStudio.Utils\AvalonStudio.Utils.csproj">
+      <Project>{f010db06-9780-4c54-86fd-2d80e666d019}</Project>
+      <Name>AvalonStudio.Utils</Name>
+    </ProjectReference>
   </ItemGroup>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
