--- a/AvalonStudio/AvalonStudio/AvalonStudio.csproj
+++ b/AvalonStudio/AvalonStudio/AvalonStudio.csproj
@@ -365,6 +365,10 @@
       <Project>{EACBFF14-438D-4311-8D8C-18E7E6769C8F}</Project>
       <Name>AvalonStudio.Models</Name>
     </ProjectReference>
+    <ProjectReference Include="..\AvalonStudio.Projects.VEBuild\AvalonStudio.Projects.VEBuild.csproj">
+      <Project>{47e266ea-bbc4-4794-96da-b1f3ecb5bb9b}</Project>
+      <Name>AvalonStudio.Projects.VEBuild</Name>
+    </ProjectReference>
     <ProjectReference Include="..\AvalonStudio.Projects\AvalonStudio.Projects.csproj">
       <Project>{b5348415-ab76-48c1-8355-28090e0b0744}</Project>
       <Name>AvalonStudio.Projects</Name>
