--- a/AvalonStudio/AvalonStudio.Projects.Standard/AvalonStudio.Projects.Standard.csproj
+++ b/AvalonStudio/AvalonStudio.Projects.Standard/AvalonStudio.Projects.Standard.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="StandardProjectFolder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IStandardProject.cs" />
   </ItemGroup>
