--- a/AvalonStudio/AvalonStudio/AvalonStudio.csproj
+++ b/AvalonStudio/AvalonStudio/AvalonStudio.csproj
@@ -297,17 +297,13 @@
       <Project>{5ae560f9-0e8e-488e-b6c4-3c8196f9013a}</Project>
       <Name>NClang</Name>
     </ProjectReference>
-    <ProjectReference Include="..\AvalonStudio.Debugging\AvalonStudio.Debugging.csproj">
-      <Project>{552d5090-69c9-43d4-87ae-2c8865b5c79e}</Project>
-      <Name>AvalonStudio.Debugging</Name>
+    <ProjectReference Include="..\AvalonStudio.Extensibility\AvalonStudio.Extensibility.csproj">
+      <Project>{5614aa2f-2b01-4e0d-807e-924680c570ed}</Project>
+      <Name>AvalonStudio.Extensibility</Name>
     </ProjectReference>
     <ProjectReference Include="..\AvalonStudio.Languages.CPlusPlus\AvalonStudio.Languages.CPlusPlus.csproj">
       <Project>{5d5fe113-ffef-4e49-a011-00a167efa36e}</Project>
       <Name>AvalonStudio.Languages.CPlusPlus</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\AvalonStudio.Languages\AvalonStudio.Languages.csproj">
-      <Project>{86eba4c1-70a3-4e20-a40a-652b7d6aaadd}</Project>
-      <Name>AvalonStudio.Languages</Name>
     </ProjectReference>
     <ProjectReference Include="..\AvalonStudio.Models\AvalonStudio.Models.csproj">
       <Project>{EACBFF14-438D-4311-8D8C-18E7E6769C8F}</Project>
@@ -317,10 +313,6 @@
       <Project>{47e266ea-bbc4-4794-96da-b1f3ecb5bb9b}</Project>
       <Name>AvalonStudio.Projects.VEBuild</Name>
     </ProjectReference>
-    <ProjectReference Include="..\AvalonStudio.Projects\AvalonStudio.Projects.csproj">
-      <Project>{b5348415-ab76-48c1-8355-28090e0b0744}</Project>
-      <Name>AvalonStudio.Projects</Name>
-    </ProjectReference>
     <ProjectReference Include="..\AvalonStudio.TextEditor\AvalonStudio.TextEditor.csproj">
       <Project>{2303a1a3-d7aa-41cc-972d-a710d7d3d1d3}</Project>
       <Name>AvalonStudio.TextEditor</Name>
@@ -328,10 +320,6 @@
     <ProjectReference Include="..\AvalonStudio.Toolchains.STM32\AvalonStudio.Toolchains.STM32.csproj">
       <Project>{b761d8e3-611e-434f-887a-8225416f51b8}</Project>
       <Name>AvalonStudio.Toolchains.STM32</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\AvalonStudio.Toolchains\AvalonStudio.Toolchains.csproj">
-      <Project>{fc693e81-70bc-4972-bfa8-19d3db8fb1cc}</Project>
-      <Name>AvalonStudio.Toolchains</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
