--- a/AvalonStudio/AvalonStudio.Toolchains.Standard/AvalonStudio.Toolchains.Standard.csproj
+++ b/AvalonStudio/AvalonStudio.Toolchains.Standard/AvalonStudio.Toolchains.Standard.csproj
@@ -46,21 +46,13 @@
     <Compile Include="ToolchainSettings.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\AvalonStudio.Extensibility\AvalonStudio.Extensibility.csproj">
+      <Project>{5614aa2f-2b01-4e0d-807e-924680c570ed}</Project>
+      <Name>AvalonStudio.Extensibility</Name>
+    </ProjectReference>
     <ProjectReference Include="..\AvalonStudio.Projects.Standard\AvalonStudio.Projects.Standard.csproj">
       <Project>{4726219f-2e8e-4f65-a5ad-3167e3dbf56c}</Project>
       <Name>AvalonStudio.Projects.Standard</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\AvalonStudio.Projects\AvalonStudio.Projects.csproj">
-      <Project>{b5348415-ab76-48c1-8355-28090e0b0744}</Project>
-      <Name>AvalonStudio.Projects</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\AvalonStudio.Toolchains\AvalonStudio.Toolchains.csproj">
-      <Project>{fc693e81-70bc-4972-bfa8-19d3db8fb1cc}</Project>
-      <Name>AvalonStudio.Toolchains</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\AvalonStudio.Utils\AvalonStudio.Utils.csproj">
-      <Project>{f010db06-9780-4c54-86fd-2d80e666d019}</Project>
-      <Name>AvalonStudio.Utils</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
