--- a/AvalonStudio/AvalonStudioBuild/AvalonStudioBuild.csproj
+++ b/AvalonStudio/AvalonStudioBuild/AvalonStudioBuild.csproj
@@ -57,6 +57,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\AvalonStudio.Extensibility\AvalonStudio.Extensibility.csproj">
+      <Project>{5614aa2f-2b01-4e0d-807e-924680c570ed}</Project>
+      <Name>AvalonStudio.Extensibility</Name>
+    </ProjectReference>
     <ProjectReference Include="..\AvalonStudio.Models\AvalonStudio.Models.csproj">
       <Project>{EACBFF14-438D-4311-8D8C-18E7E6769C8F}</Project>
       <Name>AvalonStudio.Models</Name>
@@ -69,10 +73,6 @@
       <Project>{47e266ea-bbc4-4794-96da-b1f3ecb5bb9b}</Project>
       <Name>AvalonStudio.Projects.VEBuild</Name>
     </ProjectReference>
-    <ProjectReference Include="..\AvalonStudio.Projects\AvalonStudio.Projects.csproj">
-      <Project>{b5348415-ab76-48c1-8355-28090e0b0744}</Project>
-      <Name>AvalonStudio.Projects</Name>
-    </ProjectReference>
     <ProjectReference Include="..\AvalonStudio.Toolchains.Standard\AvalonStudio.Toolchains.Standard.csproj">
       <Project>{72c71854-5897-4e14-a1ae-b3b48f139af7}</Project>
       <Name>AvalonStudio.Toolchains.Standard</Name>
@@ -80,14 +80,6 @@
     <ProjectReference Include="..\AvalonStudio.Toolchains.STM32\AvalonStudio.Toolchains.STM32.csproj">
       <Project>{b761d8e3-611e-434f-887a-8225416f51b8}</Project>
       <Name>AvalonStudio.Toolchains.STM32</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\AvalonStudio.Toolchains\AvalonStudio.Toolchains.csproj">
-      <Project>{fc693e81-70bc-4972-bfa8-19d3db8fb1cc}</Project>
-      <Name>AvalonStudio.Toolchains</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\AvalonStudio.Utils\AvalonStudio.Utils.csproj">
-      <Project>{f010db06-9780-4c54-86fd-2d80e666d019}</Project>
-      <Name>AvalonStudio.Utils</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
