--- a/AvalonStudio/AvalonStudio.Projects.VEBuild/AvalonStudio.Projects.VEBuild.csproj
+++ b/AvalonStudio/AvalonStudio.Projects.VEBuild/AvalonStudio.Projects.VEBuild.csproj
@@ -9,10 +9,11 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>AvalonStudio.Projects.VEBuild</RootNamespace>
     <AssemblyName>AvalonStudio.Projects.VEBuild</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
