--- a/AvalonStudio/AvalonStudio.Repository/AvalonStudio.Repositories.csproj
+++ b/AvalonStudio/AvalonStudio.Repository/AvalonStudio.Repositories.csproj
@@ -1,17 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\LibGit2Sharp.NativeBinaries.1.0.106\build\LibGit2Sharp.NativeBinaries.props" Condition="Exists('..\packages\LibGit2Sharp.NativeBinaries.1.0.106\build\LibGit2Sharp.NativeBinaries.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5614AA2F-2B01-4E0D-807E-924680C570ED}</ProjectGuid>
+    <ProjectGuid>{29C948E9-4D96-4490-B039-A5BBF6EEC2E5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AvalonStudio.Extensibility</RootNamespace>
-    <AssemblyName>AvalonStudio.Extensibility</AssemblyName>
+    <RootNamespace>AvalonStudio.Repositories</RootNamespace>
+    <AssemblyName>AvalonStudio.Repositories</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,12 +34,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.8.0.1-beta4\lib\net45\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="LibGit2Sharp, Version=0.22.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\LibGit2Sharp.0.22.0-pre20151023210959\lib\net40\LibGit2Sharp.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -46,48 +48,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Debugging\BreakPoint.cs" />
-    <Compile Include="Debugging\DisassembledLine.cs" />
-    <Compile Include="Debugging\Extensions.cs" />
-    <Compile Include="Debugging\Frame.cs" />
-    <Compile Include="Debugging\IDebugger.cs" />
-    <Compile Include="Debugging\MemoryBytes.cs" />
-    <Compile Include="Debugging\NameValuePair.cs" />
-    <Compile Include="Debugging\Register.cs" />
-    <Compile Include="Debugging\StopRecord.cs" />
-    <Compile Include="Debugging\Variable.cs" />
-    <Compile Include="Debugging\VariableObject.cs" />
-    <Compile Include="Debugging\VarUpdateCommand.cs" />
-    <Compile Include="Languages\CodeAnalysisResults.cs" />
-    <Compile Include="Languages\CodeCompletionData.cs" />
-    <Compile Include="Languages\CodeCompletionResults.cs" />
-    <Compile Include="Languages\Diagnostic.cs" />
-    <Compile Include="Languages\ILanguageService.cs" />
-    <Compile Include="Languages\SyntaxHighlightingData.cs" />
-    <Compile Include="Languages\UnsavedFile.cs" />
-    <Compile Include="Menus\IMenuItem.cs" />
-    <Compile Include="Platform\Platform.cs" />
-    <Compile Include="Projects\IProject.cs" />
-    <Compile Include="Projects\IProjectFolder.cs" />
-    <Compile Include="Projects\IProjectItem.cs" />
-    <Compile Include="Projects\ISolution.cs" />
-    <Compile Include="Projects\ISourceFile.cs" />
+    <Compile Include="Package.cs" />
+    <Compile Include="PackageSource.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Toolchains\IToolchain.cs" />
-    <Compile Include="Utils\Constants.cs" />
-    <Compile Include="Utils\IConsole.cs" />
-    <Compile Include="Utils\SerializedObject.cs" />
+    <Compile Include="Repository.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AvalonStudio.Extensibility\AvalonStudio.Extensibility.csproj">
+      <Project>{5614aa2f-2b01-4e0d-807e-924680c570ed}</Project>
+      <Name>AvalonStudio.Extensibility</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\AvalonStudio.TextEditor\AvalonStudio.TextEditor.csproj">
-      <Project>{2303a1a3-d7aa-41cc-972d-a710d7d3d1d3}</Project>
-      <Name>AvalonStudio.TextEditor</Name>
-    </ProjectReference>
-  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\LibGit2Sharp.NativeBinaries.1.0.106\build\LibGit2Sharp.NativeBinaries.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\LibGit2Sharp.NativeBinaries.1.0.106\build\LibGit2Sharp.NativeBinaries.props'))" />
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
