--- a/AvalonStudio/AvalonStudio/AvalonStudio.csproj
+++ b/AvalonStudio/AvalonStudio/AvalonStudio.csproj
@@ -164,12 +164,19 @@
   <ItemGroup>
     <Compile Include="App.cs" />
     <Compile Include="CompositionRoot.cs" />
+    <Compile Include="Controls\CompileSettingsForm.paml.cs">
+      <DependentUpon>CompileSettingsForm.paml</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\CompileSettingsFormViewModel.cs" />
     <Compile Include="Controls\CompletionDataViewModel.cs" />
     <Compile Include="Controls\Console.paml.cs">
       <DependentUpon>Console.paml</DependentUpon>
     </Compile>
     <Compile Include="Controls\ConsoleViewModel.cs">
       <DependentUpon>Console.paml</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\DebuggerSettingsForm.paml.cs">
+      <DependentUpon>DebuggerSettingsForm.paml</DependentUpon>
     </Compile>
     <Compile Include="Controls\ErrorViewModel.cs" />
     <Compile Include="Controls\Editor.paml.cs">
@@ -185,6 +192,10 @@
       <DependentUpon>Intellisense.paml</DependentUpon>
     </Compile>
     <Compile Include="Controls\IntellisenseViewModel.cs" />
+    <Compile Include="Controls\LinkerSettingsForm.paml.cs">
+      <DependentUpon>LinkerSettingsForm.paml</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\LinkerSettingsFormViewModel.cs" />
     <Compile Include="Controls\MainMenu.paml.cs">
       <DependentUpon>MainMenu.paml</DependentUpon>
     </Compile>
@@ -201,6 +212,10 @@
     <Compile Include="Controls\PackageManagerDialog.paml.cs">
       <DependentUpon>PackageManagerDialog.paml</DependentUpon>
     </Compile>
+    <Compile Include="Controls\ProjectConfigurationDialog.paml.cs">
+      <DependentUpon>ProjectConfigurationDialog.paml</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\ProjectConfigurationDialogViewModel.cs" />
     <Compile Include="Controls\ProjectFolderViewModel.cs">
       <DependentUpon>SolutionExplorer.paml</DependentUpon>
     </Compile>
@@ -290,6 +305,12 @@
     <EmbeddedResource Include="Controls\MetroWindowTheme.paml" />
     <None Include="app.config" />
     <EmbeddedResource Include="Controls\ErrorList.paml" />
+    <EmbeddedResource Include="Controls\CompileSettingsForm.paml" />
+    <EmbeddedResource Include="Controls\LinkerSettingsForm.paml" />
+    <EmbeddedResource Include="Controls\ProjectConfigurationDialog.paml">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\DebuggerSettingsForm.paml" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
