--- a/AvalonStudio/AvalonStudio.Models/packages.config
+++ b/AvalonStudio/AvalonStudio.Models/packages.config
@@ -2,4 +2,13 @@
 <packages>
   <package id="LibGit2Sharp" version="0.22.0-pre20150716071016" targetFramework="net45" />
   <package id="LibGit2Sharp.NativeBinaries" version="1.0.72" targetFramework="net45" />
+  <package id="Perspex" version="9999.0.978-nightly" targetFramework="net451" />
+  <package id="Rx-Core" version="2.2.5" targetFramework="net451" />
+  <package id="Rx-Interfaces" version="2.2.5" targetFramework="net451" />
+  <package id="Rx-Linq" version="2.2.5" targetFramework="net451" />
+  <package id="Rx-Main" version="2.2.5" targetFramework="net451" />
+  <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net451" />
+  <package id="Serilog" version="1.5.9" targetFramework="net451" />
+  <package id="Splat" version="1.6.2" targetFramework="net451" />
+  <package id="Sprache" version="2.0.0.47" targetFramework="net451" />
 </packages>
