--- a/AvalonStudio/AvalonStudio.Projects.VEBuild/packages.config
+++ b/AvalonStudio/AvalonStudio.Projects.VEBuild/packages.config
@@ -1,4 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Newtonsoft.Json" version="8.0.1-beta3" targetFramework="net452" />
+  <package id="Perspex" version="9999.0.978-nightly" targetFramework="net451" />
+  <package id="Rx-Core" version="2.2.5" targetFramework="net451" />
+  <package id="Rx-Interfaces" version="2.2.5" targetFramework="net451" />
+  <package id="Rx-Linq" version="2.2.5" targetFramework="net451" />
+  <package id="Rx-Main" version="2.2.5" targetFramework="net451" />
+  <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net451" />
+  <package id="Serilog" version="1.5.9" targetFramework="net451" />
+  <package id="Splat" version="1.6.2" targetFramework="net451" />
+  <package id="Sprache" version="2.0.0.47" targetFramework="net451" />
 </packages>
