Added an example of setting a ViewModel on an injected view.

--- a/AvalonStudio/AvalonStudio.Projects.VEBuild/AvalonStudio.Projects.VEBuild.csproj
+++ b/AvalonStudio/AvalonStudio.Projects.VEBuild/AvalonStudio.Projects.VEBuild.csproj
@@ -155,6 +155,7 @@
     <Compile Include="ToolchainSettingsForm.paml.cs">
       <DependentUpon>ToolchainSettingsForm.paml</DependentUpon>
     </Compile>
+    <Compile Include="ToolchainSettingsFormViewModel.cs" />
     <Compile Include="TypeSettingsForm.paml.cs">
       <DependentUpon>TypeSettingsForm.paml</DependentUpon>
     </Compile>
